bootstrap/cluster-resources/in-cluster/csdp-may-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  creationTimestamp: null
  name: csdp-may
spec: {}
status: {}
