bootstrap/cluster-resources/in-cluster/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/protocol: https
    ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: codefresh-argocd-ingress
  namespace: codefresh
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - charizard.support.cf-cd.com
  rules:
  - host: charizard.support.cf-cd.com
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 443
        path: /argocd(/|$)(.*)
        pathType: ImplementationSpecific
